src/test/ui/rfc-2565-param-attrs/param-attrs-feature-gate.stderr
error: documentation comments cannot be applied to function parameters
  --> $DIR/param-attrs-feature-gate.rs:6:5
   |
LL |     /// Foo
   |     ^^^^^^^ doc comments are not allowed here

error[E0658]: attributes on function parameters are unstable
  --> $DIR/param-attrs-feature-gate.rs:6:5
   |
LL |     /// Foo
   |     ^^^^^^^
   |
   = note: see issue #60406 <https://github.com/rust-lang/rust/issues/60406> for more information
   = help: add `#![feature(param_attrs)]` to the crate attributes to enable

error[E0658]: attributes on function parameters are unstable
  --> $DIR/param-attrs-feature-gate.rs:11:5
   |
LL |     #[allow(unused_variables)] a: u8
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #60406 <https://github.com/rust-lang/rust/issues/60406> for more information
   = help: add `#![feature(param_attrs)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
